opt: infer the specific channel staff via environment - infer EventLoopGroup, SocketChannel, ServerChannel - add kotlinx.atomicfu plugin for atomic - close the client process when all Pong messages handle finished

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,9 +5,12 @@
 kotlin = "2.0.0"
 netty = "4.1.111.Final"
 coroutines = "1.8.1"
+atomicfu = "0.25.0"
 
 [libraries]
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 netty-all = { module = "io.netty:netty-all", version.ref = "netty" }
 kotlin-serialization-plugin = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
 power-assert-plugin = { module = "org.jetbrains.kotlin:kotlin-power-assert", version.ref = "kotlin" }
+kotlinx-atomicfu-plugin = { module = "org.jetbrains.kotlinx:atomicfu-gradle-plugin", version.ref = "atomicfu" }
+
